# Illyrion

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker_image.yml
src/: bot.py  main.py  utils.py
src/cogs/: cc.py  faq.py  help.py  info.py  ip.py  metrics.py  ping.py  poll.py  uptime.py  version.py
src/selects/: poll.py
src/views/: poll.py
